Use reflective filter for UDTs [CTT-1109] [5.7.0] (#6426)
Backport of https://github.com/hazelcast/hazelcast-mono/pull/6320

Adds support for Java reflection filter in SQL User Defined Types that
are mapped to Java classes.

Breaking changes:
- User Defined Types in SQL will obey [class filter configured for
SQL](https://docs.hazelcast.com/hazelcast/5.6/sql/sql-reflection-configuration)
in `java-reflection-filter` in SQL config. If UDTs are used and the
filter is enabled it may need to be updated if some Java classes used
for UDT values are not allowed.
- `com.hazelcast.shaded.` prefix was added to default SQL reflection
filter blocklist. These classes are not supposed to be used in SQL
MAPPINGs and User Defined Types with `java` key/value format as they are
not part of the public API. However in case if they are used, the
defaults should be disabled and referenced classes added to the filter
configuration.

Performance impact:
- there can be some additional overhead of filter checks for creation of
objects described by User Defined Types in SQL DML statements if the
filter is enabled. Cases in which UDTs are not used should not be
affected.

------------

- __Jira Ticket:__ https://hazelcast.atlassian.net/browse/CTT-1109

------------

Co-authored-by: Krzysztof Jamróz <79092062+k-jamroz@users.noreply.github.com>
GitOrigin-RevId: 690cfead86a623606053eb7c734c60841b9e094a